[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/unlocks.gd" type="Script" id=1]
[ext_resource path="res://res/player_message_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/guns/17.png" type="Texture" id=3]
[ext_resource path="res://assets/guns/29.png" type="Texture" id=4]
[ext_resource path="res://assets/guns/41.png" type="Texture" id=5]
[ext_resource path="res://assets/guns/19.png" type="Texture" id=6]
[ext_resource path="res://assets/ammo/mine.png" type="Texture" id=7]
[ext_resource path="res://assets/guns/62.png" type="Texture" id=8]

[node name="Unlocks" type="Node2D"]
script = ExtResource( 1 )

[node name="Container" type="Node2D" parent="."]
position = Vector2( 0, 150 )

[node name="Row_1" type="Node2D" parent="Container"]

[node name="LeftRect" type="ColorRect" parent="Container/Row_1"]
margin_left = 50.0
margin_top = 50.0
margin_right = 450.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="Label" parent="Container/Row_1/LeftRect"]
margin_left = 50.0
margin_top = 30.0
margin_right = 132.0
margin_bottom = 57.0
theme = ExtResource( 2 )
text = "Dual Pistols"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enabled" type="Label" parent="Container/Row_1/LeftRect"]
margin_left = 50.0
margin_top = 80.0
margin_right = 134.0
margin_bottom = 107.0
theme = ExtResource( 2 )
text = "Enabled"

[node name="Sprite" type="Sprite" parent="Container/Row_1/LeftRect"]
position = Vector2( 300, 70 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="RightRect" type="ColorRect" parent="Container/Row_1"]
margin_left = 550.0
margin_top = 50.0
margin_right = 950.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="Label" parent="Container/Row_1/RightRect"]
margin_left = 50.0
margin_top = 30.0
margin_right = 132.0
margin_bottom = 57.0
theme = ExtResource( 2 )
text = "Disk Gun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enabled" type="Label" parent="Container/Row_1/RightRect"]
margin_left = 50.0
margin_top = 80.0
margin_right = 134.0
margin_bottom = 107.0
theme = ExtResource( 2 )
text = "Enabled"

[node name="Sprite" type="Sprite" parent="Container/Row_1/RightRect"]
position = Vector2( 300, 70 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="Row_2" type="Node2D" parent="Container"]
position = Vector2( 0, 200 )

[node name="LeftRect" type="ColorRect" parent="Container/Row_2"]
margin_left = 50.0
margin_top = 50.0
margin_right = 450.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="Label" parent="Container/Row_2/LeftRect"]
margin_left = 50.0
margin_top = 30.0
margin_right = 132.0
margin_bottom = 57.0
theme = ExtResource( 2 )
text = "Bazooka"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enabled" type="Label" parent="Container/Row_2/LeftRect"]
margin_left = 50.0
margin_top = 80.0
margin_right = 134.0
margin_bottom = 107.0
theme = ExtResource( 2 )
text = "Enabled"

[node name="Sprite" type="Sprite" parent="Container/Row_2/LeftRect"]
position = Vector2( 300, 70 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="RightRect" type="ColorRect" parent="Container/Row_2"]
margin_left = 550.0
margin_top = 50.0
margin_right = 950.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="Label" parent="Container/Row_2/RightRect"]
margin_left = 50.0
margin_top = 30.0
margin_right = 132.0
margin_bottom = 57.0
theme = ExtResource( 2 )
text = "Grenade Launcher"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enabled" type="Label" parent="Container/Row_2/RightRect"]
margin_left = 50.0
margin_top = 80.0
margin_right = 134.0
margin_bottom = 107.0
theme = ExtResource( 2 )
text = "Enabled"

[node name="Sprite" type="Sprite" parent="Container/Row_2/RightRect"]
position = Vector2( 300, 70 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Row_3" type="Node2D" parent="Container"]
position = Vector2( 0, 400 )

[node name="LeftRect" type="ColorRect" parent="Container/Row_3"]
margin_left = 50.0
margin_top = 50.0
margin_right = 450.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="Label" parent="Container/Row_3/LeftRect"]
margin_left = 50.0
margin_top = 30.0
margin_right = 132.0
margin_bottom = 57.0
theme = ExtResource( 2 )
text = "Katana"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enabled" type="Label" parent="Container/Row_3/LeftRect"]
margin_left = 50.0
margin_top = 80.0
margin_right = 134.0
margin_bottom = 107.0
theme = ExtResource( 2 )
text = "Enabled"

[node name="Sprite" type="Sprite" parent="Container/Row_3/LeftRect"]
position = Vector2( 300, 70 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 8 )

[node name="RightRect" type="ColorRect" parent="Container/Row_3"]
margin_left = 550.0
margin_top = 50.0
margin_right = 950.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="Label" parent="Container/Row_3/RightRect"]
margin_left = 50.0
margin_top = 30.0
margin_right = 132.0
margin_bottom = 57.0
theme = ExtResource( 2 )
text = "Mines"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enabled" type="Label" parent="Container/Row_3/RightRect"]
margin_left = 50.0
margin_top = 80.0
margin_right = 134.0
margin_bottom = 107.0
theme = ExtResource( 2 )
text = "Enabled"

[node name="Sprite" type="Sprite" parent="Container/Row_3/RightRect"]
position = Vector2( 300, 70 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="mine" type="Sprite" parent="Container/Row_3"]
position = Vector2( 958.886, -268.661 )
texture = ExtResource( 7 )
